--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     rel="stylesheet" type="text/css" />
   <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
   <link rel="stylesheet" href="//demo.productionready.io/main.css" />
+  <link rel="stylesheet" href="//demo.realworld.io/main.css">
   <title>Conduit</title>
-</head>
 
 <body>
   <div id="app"></div>
